--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,16 @@ dist.jar=${dist.dir}/StackExercise.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.common-lang3.jar=C:\\Users\\TcheutchouaSteve\\Documents\\Development\\Jars\\common-lang3.jar
+file.reference.controlsfx-8.0.6.jar=C:\\Users\\TcheutchouaSteve\\Documents\\Development\\Jars\\controlsfx-8.0.6.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.common-lang3.jar}:\
+    ${file.reference.controlsfx-8.0.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
